--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,14 +7,6 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.css"
-      integrity="sha512-5gTxhbmgsOKfPP2+TeKslkMmyxF0Cmyr2YrJrfaXD/ChLHavFXGzDDG9ZiOca1P/2/5nXuujkB2BWymVKu1pPg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    /> -->
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -22,13 +14,12 @@
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
 
-    <!-- <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"
-      integrity="sha512-Vtot07oogPy4e0JzAfUgyvia0fATgR1PWWNG89EeQgPXmaIhjGQIFijUVxRn0TScCMCH57Y7eJSixmYYDJkJ1A=="
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.js"
+      integrity="sha512-ycqisnM5/8n5gDxYe0MTYoW+5DDuupgGdbdsJ9zcu66ZszaKh4JGsmjzyi7jJY4AjynXc43DOba/m+yVGmv+wQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script> -->
-
+    ></script>
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
