--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-lightbox.html">SimpleLightbox library</a></li>
+      <li><a href="./01-basicLightboxGallery.html">basicLightbox Gallery</a></li>
+      <li><a href="./02-SimpleLightboxGallery.html">SimpleLightbox Gallery</a></li>
     </ul>
   </body>
 </html>
