--- a/01-basicLightboxGallery.html
+++ b/01-basicLightboxGallery.html
@@ -20,6 +20,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="js/01-gallery.js" type="module"></script>
+    <script src="js/01-basicLightbox.js" type="module"></script>
   </body>
 </html>
