--- a/02-simpleLightboxGallery.html
+++ b/02-simpleLightboxGallery.html
@@ -24,6 +24,6 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="js/02-lightbox.js" type="module"></script>
+    <script src="js/02-simpleLightbox.js" type="module"></script>
   </body>
 </html>
